[tool.poetry]
name = "streamlit-langchain-app"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
python-dotenv = "^1.0.0"
duckduckgo-search = "^3.9.11"
wikipedia = "^1.4.0"
langchain = "^0.0.348"
openai = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
